--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -221,6 +221,8 @@ jobs:
     needs: build
     if: needs.build.outputs.deploy-desktop == 'yes'
     runs-on: 'ubuntu-latest'
+    outputs:
+      release-desktop: ${{ steps.release.outputs.released }}
 
     steps:
       - name: Release
@@ -230,7 +232,7 @@ jobs:
   deploy-desktop:
     name: Deploy desktop
     needs: build
-    if: needs.build.outputs.deploy-desktop == 'yes' && steps.release.outputs.released == 'true'
+    if: needs.pre-release.outputs.release-desktop == 'true'
     runs-on: ${{ matrix.os }}
 
     strategy:
