fix release name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -223,7 +223,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     outputs:
       release-desktop: ${{ steps.release.outputs.released }}
-      release-id: ${{ steps.release.outputs.release_id }}
+      release-tag: ${{ steps.release.outputs.release_tag }}
 
     steps:
       - uses: actions/checkout@v2
@@ -302,7 +302,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'macos')
         with:
-          tag_name: ${{ needs.pre-release.outputs.release-id }}
+          tag_name: ${{ needs.pre-release.outputs.release-tag }}
           files: |
             dist/executables/*.dmg
             dist/executables/latest-*.yml
@@ -310,7 +310,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'windows')
         with:
-          tag_name: ${{ needs.pre-release.outputs.release-id }}
+          tag_name: ${{ needs.pre-release.outputs.release-tag }}
           files: |
             dist/executables/*.exe
             dist/executables/app-update.yml
@@ -318,7 +318,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'ubuntu')
         with:
-          tag_name: ${{ needs.pre-release.outputs.release-id }}
+          tag_name: ${{ needs.pre-release.outputs.release-tag }}
           files: |
             dist/executables/*.snap
             dist/executables/latest-*.yml
