--- a/libs/chrome-ext/src/lib/manifest.json
+++ b/libs/chrome-ext/src/lib/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Nuclia tools",
   "description": "Upload web content to Nuclia search engine",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "manifest_version": 3,
   "icons": {
     "16": "icons/icon16.png",
@@ -10,6 +10,7 @@
     "128": "icons/icon128.png"
   },
   "permissions": ["storage", "contextMenus", "tabs", "notifications"],
+  "host_permissions": ["https://www.youtube.com/"],
   "background": {
     "service_worker": "background.js"
   },
