Add AWS S3 source connector

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser-dynamic": "14.2.0",
     "@angular/router": "14.2.0",
     "@angular/service-worker": "14.2.0",
+    "@aws-sdk/client-s3": "^3.186.0",
     "@ng-web-apis/common": "^2.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
