--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,7 @@
       "@flaps/pastanaga": ["libs/pastanaga/src/index.ts"],
       "@guillotinaweb/pastanaga-angular": ["libs/pastanaga-angular/projects/pastanaga-angular/src"],
       "@nuclia/core": ["libs/sdk-core/src/index.ts"],
+      "@nuclia/prediction": ["libs/prediction/src/index.ts"],
       "@nuclia/sistema": ["libs/sistema/src/index.ts"],
       "@nuclia/widget": ["libs/search-widget/src/index.ts"]
     }
