--- a/libs/prediction/tsconfig.lib.json
+++ b/libs/prediction/tsconfig.lib.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "../../dist/prediction",
+    "declarationDir": "../..",
     "declaration": true,
     "types": []
   },
