--- a/angular.json
+++ b/angular.json
@@ -896,7 +896,7 @@
         "build": {
           "builder": "@nrwl/workspace:run-commands",
           "options": {
-            "commands": ["yarn run build:search-widgets"]
+            "commands": ["./tools/build-widgets.sh"]
           },
           "configurations": {
             "production": {}
