--- a/package.json
+++ b/package.json
@@ -14,18 +14,13 @@
     "update": "nx migrate latest",
     "help": "nx help",
     "missdev": "npx missdev --output=../libs --https --default-to-master",
+    "prediction-build": "rimraf ./dist/prediction && cd ./libs/prediction && rollup -c && cd -",
     "sdk-build": "run-script-os",
     "sdk-build:win32": "echo 'NO WIN32 BUILD'",
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd -",
     "postsdk-build:default": "yarn sdk-build-node",
     "sdk-build-node": "rimraf ./dist/sdk-core-node && cd ./libs/sdk-core/node && rollup -c && cd -",
-    "postinstall": "ngcc --properties es2020 browser module main",
-    "build:search-main-widget": "vite build -c=libs/search-widget/vite.config.js -- search-widget nuclia-widget && cp -r libs/search-widget/public/i18n dist/libs/search-widget",
-    "build:no-shadow-widget": "vite build -c=libs/search-widget/vite.no-shadow.config.js",
-    "build:search-video-widget": "vite build -c=libs/search-widget/vite.config.js -- search-video-widget nuclia-video-widget && mv dist/libs/search-video-widget/style.css dist/libs/search-video-widget/nuclia-video-widget.css",
-    "build:viewer-widget": "vite build -c=libs/search-widget/vite.config.js -- viewer-widget nuclia-viewer-widget && mv dist/libs/viewer-widget/style.css dist/libs/search-widget/nuclia-viewer-widget.css",
-    "build:search-widgets": "yarn run build:search-main-widget && yarn run build:search-video-widget && cp dist/libs/search-video-widget/* dist/libs/search-widget && yarn run build:no-shadow-widget && cp dist/libs/search-widget-no-shadow/* dist/libs/search-widget && yarn run build:viewer-widget && cp dist/libs/viewer-widget/* dist/libs/search-widget",
-    "postbuild:search-widgets": "rm -rf dist/libs/search-video-widget && rm -rf dist/libs/viewer-widget"
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
   "dependencies": {
