--- a/angular.json
+++ b/angular.json
@@ -923,6 +923,11 @@
                 "glob": "**/*",
                 "input": "libs/sistema/assets",
                 "output": "/assets/"
+              },
+              {
+                "glob": "**/*",
+                "input": "apps/sistema-demo/src/e2e",
+                "output": "/e2e/"
               }
             ],
             "styles": ["apps/sistema-demo/src/styles.scss"],
