Update Svelte to 3.55.0

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "node-machine-id": "^1.1.12",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
-    "prettier-plugin-svelte": "^2.8.0",
+    "prettier-plugin-svelte": "2.9.0",
     "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.5.0",
@@ -152,7 +152,7 @@
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.44.2",
+    "svelte": "3.55.0",
     "svelte-check": "^2.9.0",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.9.8",
