--- a/package.json
+++ b/package.json
@@ -160,6 +160,6 @@
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.7.4",
-    "vite": "2.9.15"
+    "vite": "^3.2.5"
   }
 }
