--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "prettier": "2.7.1",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
-    "rollup": "^2.66.0",
+    "rollup": "3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
@@ -160,6 +160,6 @@
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.7.4",
-    "vite": "^3.2.5"
+    "vite": "4"
   }
 }
