[sc-3494] Search when changing kb (#495)
* Update Svelte to 3.55.0

* Update vite to version 3.2.5

* Update vite to version 4 and rollup to version 3

* Update svelte-check to 2.10.3 and svelte-preprocess to 4.10.7

* Update rollup-plugin-dts to version 5 (which is the one working with rollup 3)

* Fix rollup configs to work with rollup 3

* Reset search and suggestion stores when destroying search bar

* Fix deprecation warning for imported style

* Fix [sc-3494]: properly destroy widgets

  - on ngOnDestroy, call svelte $destroy method instead of just removing the DOM elements
  - on document tile, don't select paragraph on reset to prevent "Nuclia API not initialized" when destroying the widget

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "node-machine-id": "^1.1.12",
     "perfect-scrollbar": "^1.5.0",
     "posthog-js": "^1.17.9",
-    "prettier-plugin-svelte": "^2.8.0",
+    "prettier-plugin-svelte": "2.9.0",
     "protobufjs": "^6.11.3",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.5.0",
@@ -145,21 +145,21 @@
     "prettier": "2.7.1",
     "replace-in-file": "^6.3.5",
     "rimraf": "^3.0.2",
-    "rollup": "^2.66.0",
+    "rollup": "3",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^4.1.0",
+    "rollup-plugin-dts": "5",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.44.2",
-    "svelte-check": "^2.9.0",
+    "svelte": "3.55.0",
+    "svelte-check": "^2.10.3",
     "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.9.8",
+    "svelte-preprocess": "^4.10.7",
     "ts-jest": "28.0.8",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.7.4",
-    "vite": "2.9.15"
+    "vite": "4"
   }
 }
