--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@nrwl/workspace": "14.6.4",
     "@nxext/svelte": "^14.0.2",
     "@rollup/plugin-inject": "^4.0.4",
+    "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "14.2.1",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
@@ -132,7 +133,6 @@
     "jest": "28.1.3",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "12.2.2",
-    "jsrsasign": "^10.1.0",
     "ng-mocks": "^14.1.1",
     "ng-packagr": "14.2.0",
     "ngx-build-plus": "11.0.0",
@@ -151,7 +151,6 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
     "svelte": "3.55.0",
     "svelte-check": "^2.10.3",
     "svelte-jester": "^2.3.2",
