--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,15 @@
 # dependencies
 node_modules
 
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # IDEs and editors
 /.idea
 .project
