--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclia",
-  "version": "1.0.22",
+  "version": "1.0.23",
   "license": "MIT",
   "author": "Nuclia.cloud",
   "description": "Nuclia frontend apps and libs",
@@ -121,7 +121,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
-    "electron-builder": "^23.0.2",
+    "electron-builder": "23.6.0",
     "electron-notarize": "^1.2.1",
     "es-dirname": "^0.1.0",
     "eslint": "8.15.0",
