--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -302,8 +302,15 @@ jobs:
           echo '${{ secrets.APPLE_API_SECRET }}' > ~/private_keys/AuthKey_${{ secrets.APPLE_API_KEY }}.p8
           echo "APPLE_API_ISSUER=${{ secrets.APPLE_API_ISSUER }}" > .env
           echo "APPLE_API_KEY=${{ secrets.APPLE_API_KEY }}" >> .env
-      - name: Package and publish electron app
+      - name: Package electron app on MacOSX
+        if: startsWith(matrix.os, 'macos')
         run: PYTHON_PATH=$(which python) npx nx run desktop-electron:make --publish always
+      - name: Package electron app on Windows
+        if: startsWith(matrix.os, 'windows')
+        run: npx nx run desktop-electron:make --publish always
+      - name: Package electron app on Ubuntu
+        if: startsWith(matrix.os, 'ubuntu')
+        run: npx nx run desktop-electron:make --publish always
       - name: Release MacOSX installer
         uses: softprops/action-gh-release@v1
         if: startsWith(matrix.os, 'macos')
