--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuclia",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "license": "MIT",
   "author": "Nuclia.cloud",
   "description": "Nuclia frontend apps and libs",
@@ -56,6 +56,7 @@
     "fuse.js": "^3.6.1",
     "googleapis": "^110.0.0",
     "latinize": "^0.5.0",
+    "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
     "node-machine-id": "^1.1.12",
@@ -109,6 +110,7 @@
     "@types/jexl": "^2.2.0",
     "@types/latinize": "^0.2.15",
     "@types/lru-cache": "^5.1.0",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "18.7.1",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
