--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,6 +135,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Calculate short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
       - name: Set helm package image
         id: version_step
         run: |-
@@ -175,13 +178,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Calculate short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
       - name: Set helm package image
         id: version_step
         run: |-
           sed -i.bak "s#IMAGE_TO_REPLACE#$MANAGER_IMAGE_NAME:${SHORT_SHA}#" ./charts/manager/values.yaml
           sed -i.bak "s#CONTAINER_REGISTRY_TO_REPLACE#$CONTAINER_REGISTRY#" ./charts/manager/values.yaml
           VERSION=`cat apps/manager/VERSION`
-          VERSION_SHA=$VERSION+${SHORT_SHA}
+          VERSION_SHA=$VERSION+$SHORT_SHA
           sed -i.bak "s#99999.99999.99999#$VERSION_SHA#" ./charts/manager/Chart.yaml
           echo "version_number=$VERSION_SHA" >> $GITHUB_OUTPUT
 
