--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fuse.js": "^3.6.1",
     "googleapis": "^110.0.0",
     "latinize": "^0.5.0",
+    "mime": "^3.0.0",
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
