fix type imports + build widget npm package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "help": "nx help",
     "missdev": "npx missdev --output=../libs --https --default-to-master",
     "prediction-build": "rimraf ./dist/prediction && cd ./libs/prediction && rollup -c && cd ../..",
+    "widget-lib-build": "cd libs/search-widget && svelte-package -i src -o ../../dist/search-widget-lib && cp package.json ../../dist/search-widget-lib && cd ../..",
     "sdk-build": "run-script-os",
     "sdk-build:win32": "echo 'NO WIN32 BUILD'",
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd ../..",
@@ -45,6 +46,8 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@sentry/angular": "^7.2.0",
     "@sentry/tracing": "^7.2.0",
+    "@sveltejs/kit": "^1.9.2",
+    "@sveltejs/package": "^2.0.2",
     "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^14.0.0",
     "child_process": "^1.0.2",
