--- a/libs/search-widget/package.json
+++ b/libs/search-widget/package.json
@@ -1,4 +1,33 @@
 {
   "name": "@nuclia/widget",
-  "version": "0.0.1"
+  "version": "1.0.0",
+  "description": "Nuclia search widget",
+  "module": "nuclia.mjs",
+  "main": "nuclia.umd.js",
+  "license": "MIT",
+  "keywords": [
+    "Nuclia",
+    "NucliaDB",
+    "AI search"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nuclia/frontend"
+  },
+  "bugs": {
+    "url": "https://github.com/nuclia/frontend/issues"
+  },
+  "peerDependencies": {
+    "@nuclia/core": "^1.1.3",
+    "@nuclia/prediction": "^1.0.0",
+    "date-fns": "^2.29.3",
+    "rxjs": "^7.5.2",
+    "svelte": "^3.55.0"
+  },
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "svelte": "./index.js"
+    }
+  }
 }
