--- a/libs/search-widget/package.json
+++ b/libs/search-widget/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nuclia/widget",
   "version": "1.0.0",
-  "description": "Nuclia search widget",
+  "description": "Nuclia search widgets",
   "module": "nuclia.mjs",
   "main": "nuclia.umd.js",
   "license": "MIT",
@@ -18,7 +18,7 @@
     "url": "https://github.com/nuclia/frontend/issues"
   },
   "peerDependencies": {
-    "@nuclia/core": "^1.1.3",
+    "@nuclia/core": "^1.1.4",
     "@nuclia/prediction": "^1.0.0",
     "date-fns": "^2.29.3",
     "rxjs": "^7.5.2",
