--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "@sveltejs/package": "^2.0.2",
     "algoliasearch": "^4.13.1",
     "angular-svg-icon": "^14.0.0",
+    "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "core-js": "^3.6.4",
     "crypto": "^1.0.1",
     "d3": "^6.7.0",
     "date-fns": "^2.29.3",
     "electron-updater": "^5.0.1",
+    "express": "^4.18.2",
     "fuse.js": "^3.6.1",
     "googleapis": "^110.0.0",
     "latinize": "^0.5.0",
@@ -106,6 +108,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "@types/core-js": "^2.5.4",
     "@types/d3": "^6.7.0",
+    "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.42",
     "@types/gapi.auth2": "^0.0.56",
     "@types/gapi.client.drive": "^3.0.13",
