--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sdk-build:default": "rimraf ./dist/sdk-core && cd ./libs/sdk-core && rollup -c && cd ../..",
     "postsdk-build:default": "yarn sdk-build-node",
     "sdk-build-node": "rimraf ./dist/sdk-core-node && cd ./libs/sdk-core/node && rollup -c && cd ../..",
+    "desktop-server-dev": "concurrently \"npx tsc -p apps/desktop/electron/tsconfig.server.json --watch\" \"nodemon -q dist/service/server.js\"",
     "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
@@ -128,6 +129,7 @@
     "@typescript-eslint/parser": "5.33.1",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
+    "concurrently": "^7.6.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
     "electron": "^17.0.0",
@@ -146,6 +148,7 @@
     "ng-mocks": "^14.1.1",
     "ng-packagr": "14.2.0",
     "ngx-build-plus": "11.0.0",
+    "nodemon": "^2.0.21",
     "nx": "14.6.4",
     "nx-electron": "^13.0.0",
     "postcss": "^8.4.16",
