--- a/angular.json
+++ b/angular.json
@@ -80,6 +80,94 @@
       },
       "tags": []
     },
+    "contributor": {
+      "projectType": "application",
+      "root": "apps/contributor",
+      "sourceRoot": "apps/contributor/src",
+      "prefix": "nuclia",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/contributor",
+            "index": "apps/contributor/src/index.html",
+            "main": "apps/contributor/src/main.ts",
+            "polyfills": "apps/contributor/src/polyfills.ts",
+            "tsConfig": "apps/contributor/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": ["apps/contributor/src/favicon.ico", "apps/contributor/src/assets"],
+            "styles": ["apps/contributor/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/contributor/src/environments/environment.ts",
+                  "with": "apps/contributor/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "contributor:build:production"
+            },
+            "development": {
+              "browserTarget": "contributor:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "contributor:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/contributor/**/*.ts", "apps/contributor/**/*.html"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/contributor"],
+          "options": {
+            "jestConfig": "apps/contributor/jest.config.ts",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "core": {
       "$schema": "../../node_modules/nx/schemas/project-schema.json",
       "projectType": "library",
